mobile nav dropdown menu collapse fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -195,6 +195,6 @@
   }
 
   p {
-    @apply text-[1rem] md:text-[1.125rem] leading-7 md:leading-8 text-justify;
+    @apply text-[1rem] md:text-[1.125rem] leading-7 md:leading-8 text-left;
   }
 }
